[gd_scene load_steps=8 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://cool_theme.tres" type="Theme" id=2]
[ext_resource path="res://MainUI.tscn" type="PackedScene" id=3]
[ext_resource path="res://HeistPlan.tscn" type="PackedScene" id=4]
[ext_resource path="res://Fishing.tscn" type="PackedScene" id=5]
[ext_resource path="res://Big_UI.tres" type="DynamicFont" id=6]
[ext_resource path="res://TutorialDialog.tscn" type="PackedScene" id=7]

[node name="Port" type="Node2D"]
script = ExtResource( 1 )
plan_heist = ExtResource( 4 )
fishing = ExtResource( 5 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="PortHUD" type="Control" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainUI" parent="UI/PortHUD" instance=ExtResource( 3 )]

[node name="Buttons" type="VBoxContainer" parent="UI/PortHUD"]
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.3
anchor_bottom = 0.7
margin_right = 92.0
theme = ExtResource( 2 )
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FishButton" type="Button" parent="UI/PortHUD/Buttons"]
visible = false
margin_right = 296.0
margin_bottom = 178.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 6 )
text = "Go Fishing"

[node name="HeistButton" type="Button" parent="UI/PortHUD/Buttons"]
margin_right = 296.0
margin_bottom = 360.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 6 )
text = "Plan Heist"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextDayButton" type="Button" parent="UI/PortHUD/Buttons"]
visible = false
margin_top = 335.0
margin_right = 296.0
margin_bottom = 360.0
size_flags_horizontal = 3
theme = ExtResource( 2 )
text = "Next Day"

[node name="mummo" type="Button" parent="UI/PortHUD"]
margin_left = 496.0
margin_top = 190.0
margin_right = 619.0
margin_bottom = 289.0

[node name="TutorialDialog" parent="UI" instance=ExtResource( 7 )]
margin_left = 172.0
margin_top = 62.0
margin_right = 807.0
margin_bottom = 440.0
dialog_text = "So, you want to leave? You will need a plane ticket, that can be purchased with money. A LOT of money. 

You might have to rob a few ships to get it...

The UI, from left to right:

Money - Can be used to buy things, including a plane ticket. You get it by robbing ships.

Food - You need this to survive to the next day. If you don't have any, you starve!

Notoriety - As you rob ships, your notoriety increases, and ships will be more dangerous to rob. Get out before it gets too high!

Mercenaries -  They help you win battles and take a small share of the loot. You need these for later ecounters.

Day - How many days have passed since you started."

[connection signal="pressed" from="UI/PortHUD/Buttons/FishButton" to="." method="_on_FishButton_pressed"]
[connection signal="pressed" from="UI/PortHUD/Buttons/HeistButton" to="." method="_on_HeistButton_pressed"]
